# nostr-sdk-wasm-example

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
