[package]
name = "nostr-sdk-wasm-example"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "de1371c661318204a9096d68ba3131be0bf9c6fd" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
