[package]
name = "nostr-sdk-wasm-example"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
#nostr-sdk = { path = "../../nostr/nostr/crates/nostr-sdk" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "22cfca6c974641ba7c50e72d19b30aa44769b304" }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
